@@ -272,7 +272,7 @@ void add_recordingrule(sqlite3* instance, struct recordingrule const& recordingr
 			"value as data "
 			"from "
 			"json_each((with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
-			"select http_request('http://ipv4.my.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=add&SeriesID=' || ?1 || "
+			"select http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=add&SeriesID=' || ?1 || "
 			"case when ?2 is null then '' else '&RecentOnly=' || ?2 end || "
 			"case when ?3 is null then '' else '&ChannelOnly=' || decode_channel_id(?3) end || "
 			"case when ?4 is null then '' else '&AfterOriginalAirdateOnly=' || strftime('%s', date(?4, 'unixepoch')) end || "
@@ -312,7 +312,7 @@ void add_recordingrule(sqlite3* instance, struct recordingrule const& recordingr
 		sql = "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
 			"replace into episode "
 			"select ?1 as seriesid, "
-			"http_request('http://ipv4.my.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || ?1) as data "
+			"http_request('http://api.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || ?1) as data "
 			"from deviceauth "
 			"where cast(data as text) <> 'null'";
 
@@ -483,7 +483,7 @@ void delete_recordingrule(sqlite3* instance, unsigned int recordingruleid)
 		// Delete the recording rule from the backend services and the local database
 		auto sql = "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
 			"delete from recordingrule where recordingruleid in "
-			"(select case when cast(http_request('http://ipv4.my.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || "
+			"(select case when cast(http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || "
 			"'&Cmd=delete&RecordingRuleID=' || ?1) as text) = 'null' then ?1 else null end from deviceauth)";
 
 		result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
@@ -663,7 +663,7 @@ void discover_devices_http(sqlite3* instance)
 		"coalesce(json_extract(discovery.value, '$.DeviceID'), json_extract(discovery.value, '$.StorageID')) as deviceid, "
 		"case when json_type(discovery.value, '$.DeviceID') is not null then 'tuner' when json_type(discovery.value, '$.StorageID') is not null then 'storage' else 'unknown' end as type, "
 		"http_request(json_extract(discovery.value, '$.DiscoverURL'), null) as data "
-		"from json_each(http_request('http://ipv4.my.hdhomerun.com/discover')) as discovery "
+		"from json_each(http_request('http://api.hdhomerun.com/discover')) as discovery "
 		"where data is not null and json_extract(data, '$.Legacy') is null");
 }
 
@@ -707,7 +707,7 @@ void discover_episodes(sqlite3* instance, bool& changed)
 		// Discover the episode information for each series that has a recording rule
 		execute_non_query(instance, "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
 			"insert into discover_episode select entry.seriesid as seriesid, "
-			"http_request('http://ipv4.my.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || entry.seriesid) as data "
+			"http_request('http://api.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || entry.seriesid) as data "
 			"from deviceauth, (select distinct json_extract(data, '$.SeriesID') as seriesid from recordingrule where seriesid is not null) as entry");
 
 		// This requires a multi-step operation against the episode table; start a transaction
@@ -782,7 +782,7 @@ void discover_guide(sqlite3* instance, bool& changed)
 			"json_extract(discovery.value, '$.GuideName') as channelname, "
 			"json_extract(discovery.value, '$.ImageURL') as iconurl, "
 			"null as data "
-			"from deviceauth, json_each(http_request('http://ipv4.my.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, ''))) as discovery");
+			"from deviceauth, json_each(http_request('http://api.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, ''))) as discovery");
 
 		// This requires a multi-step operation against the guide table; start a transaction
 		execute_non_query(instance, "begin immediate transaction");
@@ -923,7 +923,7 @@ void discover_recordingrules(sqlite3* instance, bool& changed)
 			"json_extract(value, '$.RecordingRuleID') as recordingruleid, "
 			"json_extract(value, '$.SeriesID') as seriesid, "
 			"value as data "
-			"from deviceauth, json_each(http_request('http://ipv4.my.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '')))");
+			"from deviceauth, json_each(http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '')))");
 
 		// This requires a multi-step operation against the recording table; start a transaction
 		execute_non_query(instance, "begin immediate transaction");
@@ -1371,7 +1371,7 @@ void enumerate_guideentries(sqlite3* instance, union channelid channelid, time_t
 		"get_episode_number(json_extract(entry.value, '$.EpisodeNumber')) as episodenumber, "
 		"json_extract(entry.value, '$.EpisodeTitle') as episodename "
 		"from deviceauth, "
-		"json_each(json_extract(nullif(http_request('http://ipv4.my.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Channel=' || decode_channel_id(?1) || '&Start=' || ?2), 'null'), '$[0].Guide')) as entry";
+		"json_each(json_extract(nullif(http_request('http://api.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Channel=' || decode_channel_id(?1) || '&Start=' || ?2), 'null'), '$[0].Guide')) as entry";
 
 	result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
 	if(result != SQLITE_OK) throw sqlite_exception(result, sqlite3_errmsg(instance));
@@ -1685,7 +1685,7 @@ void enumerate_series(sqlite3* instance, char const* title, enumerate_series_cal
 		"select "
 		"json_extract(value, '$.Title') as title, "
 		"json_extract(value, '$.SeriesID') as seriesid "
-		"from deviceauth, json_each(http_request('http://ipv4.my.hdhomerun.com/api/search?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Search=' || url_encode(?1))) "
+		"from deviceauth, json_each(http_request('http://api.hdhomerun.com/api/search?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Search=' || url_encode(?1))) "
 		"where title like '%' || ?1 || '%'";
 
 	result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
@@ -1832,7 +1832,7 @@ std::string find_seriesid(sqlite3* instance, union channelid channelid, time_t t
 	// No guide data is stored locally anymore; always use the backend service to search for the seriesid.
 	// Use the electronic program guide API to locate a seriesid based on a channel and timestamp
 	auto sql = "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
-		"select json_extract(json_extract(nullif(http_request('http://ipv4.my.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Channel=' || decode_channel_id(?1) || '&Start=' || ?2), 'null'), '$[0].Guide[0]'), '$.SeriesID') "
+		"select json_extract(json_extract(nullif(http_request('http://api.hdhomerun.com/api/guide?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Channel=' || decode_channel_id(?1) || '&Start=' || ?2), 'null'), '$[0].Guide[0]'), '$.SeriesID') "
 		"from deviceauth";
 
 	result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
@@ -1882,7 +1882,7 @@ std::string find_seriesid(sqlite3* instance, char const* title)
 	auto sql = "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
 		"select "
 		"json_extract(value, '$.SeriesID') as seriesid "
-		"from deviceauth, json_each(http_request('http://ipv4.my.hdhomerun.com/api/search?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Search=' || url_encode(?1))) "
+		"from deviceauth, json_each(http_request('http://api.hdhomerun.com/api/search?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Search=' || url_encode(?1))) "
 		"where json_extract(value, '$.Title') like ?1"
 		"limit 1";
 
@@ -2535,7 +2535,7 @@ void modify_recordingrule(sqlite3* instance, struct recordingrule const& recordi
 			"value as data "
 			"from "
 			"json_each((with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
-			"select http_request('http://ipv4.my.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=change&RecordingRuleID=' || ?1 || "
+			"select http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=change&RecordingRuleID=' || ?1 || "
 			"'&RecentOnly=' || case when ?2 is null then '' else ?2 end || "
 			"'&ChannelOnly=' || case when ?3 is null then '' else decode_channel_id(?3) end || "
 			"'&AfterOriginalAirdateOnly=' || case when ?4 is null then '' else strftime('%s', date(?4, 'unixepoch')) end || "
@@ -2573,7 +2573,7 @@ void modify_recordingrule(sqlite3* instance, struct recordingrule const& recordi
 		sql = "with deviceauth(code) as (select group_concat(json_extract(data, '$.DeviceAuth'), '') from device) "
 			"replace into episode "
 			"select recordingrule.seriesid, "
-			"http_request('http://ipv4.my.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || recordingrule.seriesid) as data "
+			"http_request('http://api.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || recordingrule.seriesid) as data "
 			"from recordingrule, deviceauth "
 			"where recordingrule.recordingruleid = ?1 "
 			"and cast(data as text) <> 'null'";
